--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/gratefuljed/gratefuljed.github.io#readme",
   "dependencies": {
+    "live-server": "^1.2.0",
     "node-sass": "^4.9.0"
   }
 }
